# CorpAudit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  cargo-check-output.txt  config.example.json
.github/workflow/: mainCi.yml
.github/workflows/: mainCi.yml  manual-build.yml
.qwen/: settings.json
src/: alternatives.rs  audit.rs  baseline.rs  blocker.rs  comparison.rs  config.rs  export.rs  fix.rs  gui.rs  history.rs  main.rs  manifest.rs  monitor.rs  scanner.rs  scheduler.rs  scorer.rs  startup.rs  traffic.rs  tree.rs  visualization.rs
src/windows/: fixes.rs  mod.rs  network.rs  permissions.rs  process_info.rs  telemetry.rs  version.rs
