[package]
name = "corpaudit"
version = "0.1.0"
edition = "2021"
authors = ["CorpAudit Contributors"]
description = "Audit corporate bloat, telemetry, and privacy violations on your system"
license = "MIT"
repository = "https://github.com/aidurr/corpaudit"
keywords = ["privacy", "security", "audit", "telemetry", "bloat"]
categories = ["command-line-utilities", "system-tools"]

[[bin]]
name = "corpaudit"
path = "src/main.rs"

[[bin]]
name = "corpaudit-gui"
path = "src/gui.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
colored = "2.1"
dirs = "5.0"
tempfile = "3.10"
gethostname = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
unicode-width = "0.1"
egui = "0.29"
eframe = "0.29"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Management",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_ProcessStatus",
    "Win32_Security_Authorization",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
] }
